--- a/testplot.html
+++ b/testplot.html
@@ -142,7 +142,7 @@
         var firstCoord = leftAxis.attr("positionx") + " " + leftYScale(datum[sector]) + " " + leftAxis.attr("positionz");
         var secondCoord = rightAxis.attr("positionx") + " " + rightYScale(datum[sector+1]) + " " + rightAxis.attr("positionz");
 
-        console.log("Creating line, first coord: " + firstCoord + " ; second coord: " + second coord);
+        console.log("Creating line, first coord: " + firstCoord + " ; second coord: " + secondCoord);
         console.log("Sector: " + sector);
 
         // Set attributes
