fixed positionx, changed logging

--- a/testplot.html
+++ b/testplot.html
@@ -49,12 +49,12 @@
         var boundaries = d3.extent(cars[index+1]);
 
         console.log("Creating axis at x=" + xScale(index) + " using " + index);
-        console.log("Bounardies: " + boundaries[0] + " " + boundaries[1]);
+        console.log("Bounardies: " + boundaries);
 
         // Set attributes
         entity.attr("name", datum);
         entity.attr("positionorder", index);
-        entity.attr("positionx", xScale(datum));
+        entity.attr("positionx", xScale(index));
         entity.attr("positionz", zOffset);
         entity.attr("height", height);
         entity.attr("minvalue", boundaries[0]);
