--- a/testplot.html
+++ b/testplot.html
@@ -48,7 +48,7 @@
         var entity = d3.select(this);
         var boundaries = d3.extent(cars[index+1]);
 
-        console.log("Creating axis at x=" + xScale(index) + " using " + index);
+        console.log("Creating axis at x=" + xScale(index) + " using " + index + " for " + datum);
         console.log("Bounardies: " + boundaries);
 
         // Set attributes
