--- a/testplot.html
+++ b/testplot.html
@@ -50,6 +50,7 @@
 
         console.log("Creating axis at x=" + xScale(index) + " using " + index + " for " + datum);
         console.log("Bounardies: " + boundaries);
+        console.log("cars[index+1]: " + cars[index+1]);
 
         // Set attributes
         entity.attr("name", datum);
