--- a/testplot.html
+++ b/testplot.html
@@ -49,7 +49,7 @@
         //var boundaries = d3.extent(cars[datum]);
 
         console.log("Creating axis at x=" + xScale(index) + " using " + index + " for " + datum);
-        console.log("Bounardies: " + boundaries);
+        //console.log("Bounardies: " + boundaries);
         console.log("cars[datum][0]: " + cars[datum][0]);
         console.log("cars[datum][1]: " + cars[datum][1]);
 
