--- a/testplot.html
+++ b/testplot.html
@@ -50,8 +50,8 @@
 
         console.log("Creating axis at x=" + xScale(index) + " using " + index + " for " + datum);
         //console.log("Bounardies: " + boundaries);
-        console.log("cars[datum][0]: " + cars[datum][0]);
-        console.log("cars[datum][1]: " + cars[datum][1]);
+        console.log("cars[datum][0]: " + csvData[datum]);
+        console.log("cars[datum][1]: " + csvData[0]);
 
         // Set attributes
         entity.attr("name", datum);
