--- a/testplot.html
+++ b/testplot.html
@@ -53,8 +53,8 @@
         console.log("Bounardies: " + boundaries);
         console.log("csvData[index]: " + csvData[index]);
         console.log("csvData[index][1]: " + csvData[index][1]);
-        console.log("csvData[datum]: " + csvData[datum]);
-        console.log("csvData[datum][1]: " + csvData[datum][1]);
+        console.log("cars[datum]: " + cars[datum]);
+        console.log("cars[datum][1]: " + cars[datum][1]);
 
         // Set attributes
         entity.attr("name", datum);
