--- a/testplot.html
+++ b/testplot.html
@@ -52,9 +52,10 @@
         console.log("Creating axis at x=" + xScale(index) + " using " + index + " for " + datum);
         console.log("Bounardies: " + boundaries);
         console.log("csvData[index]: " + csvData[index]);
-        console.log("csvData[index][1]: " + csvData[index][1]);
+        console.log("csvData[index][5]: " + csvData[index][5]);
         console.log("cars[datum]: " + cars[datum]);
-        console.log("cars[datum][1]: " + cars[datum][1]);
+        console.log("cars[index]: " + cars[index]);
+        console.log("cars[index][5]: " + cars[index][5]);
 
         // Set attributes
         entity.attr("name", datum);
