--- a/testplot.html
+++ b/testplot.html
@@ -47,10 +47,10 @@
       .each(function(datum, index) {
         // Select itself
         var entity = d3.select(this);
-        var boundaries = d3.extent(cars[datum]);
+        //var boundaries = d3.extent(cars[datum]);
 
         console.log("Creating axis at x=" + xScale(index) + " using " + index + " for " + datum);
-        console.log("Bounardies: " + boundaries);
+        //console.log("Bounardies: " + boundaries);
         console.log("cars[datum][1]: " + cars[datum][1]);
         console.log("cars[1][datum]: " + cars[1][datum]);
 
