--- a/testplot.html
+++ b/testplot.html
@@ -51,7 +51,7 @@
 
         console.log("Creating axis at x=" + xScale(index) + " using " + index + " for " + datum);
         //console.log("Bounardies: " + boundaries);
-        console.log("cars[datum][1]: " + cars[datum][1]);
+        //console.log("cars[datum][1]: " + cars[datum][1]);
         console.log("cars[1][datum]: " + cars[1][datum]);
 
         // Set attributes
