--- a/testplot.html
+++ b/testplot.html
@@ -52,9 +52,7 @@
         });
 
         console.log("Creating axis at x=" + xScale(index) + " using " + index + " for " + datum);
-        //console.log("Bounardies: " + boundaries);
-        //console.log("cars[datum][1]: " + cars[datum][1]);
-        console.log("cars[1][datum]: " + cars[1][datum]);
+        console.log("Boundardies: " + boundaries);
 
         // Set attributes
         entity.attr("name", datum);
