--- a/testplot.html
+++ b/testplot.html
@@ -142,8 +142,8 @@
         // Select itself
         var entity = d3.select(this);
         // offsetx(from axes) + scale(datum[sector]) + offsetz(from axes)
-        var firstCoord = leftAxis.attr("positionx") + " " + leftYScale(leftAxis.attr("name")) + " " + leftAxis.attr("positionz");
-        var secondCoord = rightAxis.attr("positionx") + " " + rightYScale(rightAxis.attr("name")) + " " + rightAxis.attr("positionz");
+        var firstCoord = leftAxis.attr("positionx") + " " + leftYScale(datum[leftAxis.attr("name")]) + " " + leftAxis.attr("positionz");
+        var secondCoord = rightAxis.attr("positionx") + " " + rightYScale(datum[rightAxis.attr("name")]) + " " + rightAxis.attr("positionz");
 
         console.log("Creating line, first coord: " + firstCoord + " ; second coord: " + secondCoord);
         console.log("Sector: " + sector);
