--- a/testplot.html
+++ b/testplot.html
@@ -216,7 +216,7 @@
               var nextAxis = d3.select("a-scene").select("a-axis[positionorder='" + (data.positionOrder + 1) + "']");
 
               // Check if at ends
-              if (prevAxis){
+              if (prevAxis[0]){
                 // Check if before previous axis (moving up in the list)
                 if (data.positionX < prevAxis.attr("positionx") ||
                     data.positionY < prevAxis.attr("positiony")) {
@@ -245,7 +245,7 @@
                         }
                       }
                     }
-              } else if (nextAxis) {
+              } else if (nextAxis[0]) {
                 // Check if after next axis
                 if (data.positionX > nextAxis.attr("positionx") ||
                     data.positionY > nextAxis.attr("positiony")) {
