--- a/testplot.html
+++ b/testplot.html
@@ -65,9 +65,16 @@
       });
 
       // Generate Lines
-      for (i = 0; i < names.length - 2; i++) {
-        generateLines(i);
-      }
+      //for (i = 0; i < names.length - 2; i++) {
+      //  generateLines(i);
+      //}
+
+      generateLines(0);
+      generateLines(1);
+      generateLines(2);
+      generateLines(3);
+      generateLines(4);
+      generateLines(5);
 /*
       x.domain(dimensions = d3.keys(cars[0]) // get column names (leaving as global)
         .filter(function(column_name) {
