--- a/testplot.html
+++ b/testplot.html
@@ -250,7 +250,7 @@
                         // Middle section
                         // Update 3 sectors
                         // sectors (positionOrder - 1), positionOrder, (positionOrder + 1)
-                        for (i = (positionOrder - 1); i < positionOrder + 2; i++){
+                        for (i = (data.positionOrder - 1); i < data.positionOrder + 2; i++){
                           generateLines(i);
                         }
                       }
@@ -278,7 +278,7 @@
                         // Middle section
                         // Update 3 sectors
                         // sectors (positionOrder - 1), positionOrder, (positionOrder + 1)
-                        for (i = (positionOrder - 1); i < positionOrder + 2; i++){
+                        for (i = (data.positionOrder - 1); i < data.positionOrder + 2; i++){
                           generateLines(i);
                         }
                       }
