--- a/testplot.html
+++ b/testplot.html
@@ -417,7 +417,7 @@
   </script>
   <a-scene>
     <a-assets>
-      <img id="ground" src="ground.jpg">
+      <img id="ground" src="ground.png">
     </a-assets>
     <a-camera look-controls wasd-controls='easing:10'>
       <a-cursor></a-cursor>
