--- a/testplot.html
+++ b/testplot.html
@@ -28,7 +28,9 @@
     d3.csv("cars.csv", function(cars) {
       // Store data
       csvData = cars;
-      csvData.map(function(d) { return +d; });
+      csvData.map(function(d) {
+        return +d;
+      });
       // Generate axes
       // Delete old axis (if they exist)
       d3.select("a-scene").selectAll("a-datum").remove();
@@ -36,33 +38,33 @@
       var names = d3.keys(cars[0]).filter(function(column_name) {
         return column_name != "name";
       })
-      var xScale =  d3.scale.linear();
+      var xScale = d3.scale.linear();
       xScale.range([0, width]);
-      xScale.domain([0, (names.length-1)]);
+      xScale.domain([0, (names.length - 1)]);
 
       d3.select("a-scene").selectAll("a-axis")
-      .data(names)
-      .enter()
-      .append("a-axis")
-      .each(function(datum, index) {
-        // Select itself
-        var entity = d3.select(this);
-        var boundaries = d3.extent(cars, function(max_values) {
-          return +max_values[datum];
+        .data(names)
+        .enter()
+        .append("a-axis")
+        .each(function(datum, index) {
+          // Select itself
+          var entity = d3.select(this);
+          var boundaries = d3.extent(cars, function(max_values) {
+            return +max_values[datum];
+          });
+
+          console.log("Creating axis at x=" + xScale(index) + " using " + index + " for " + datum);
+          console.log("Boundardies: " + boundaries);
+
+          // Set attributes
+          entity.attr("name", datum);
+          entity.attr("positionorder", index);
+          entity.attr("positionx", xScale(index));
+          entity.attr("positionz", zOffset);
+          entity.attr("height", height);
+          entity.attr("minvalue", boundaries[0]);
+          entity.attr("maxvalue", boundaries[1]);
         });
-
-        console.log("Creating axis at x=" + xScale(index) + " using " + index + " for " + datum);
-        console.log("Boundardies: " + boundaries);
-
-        // Set attributes
-        entity.attr("name", datum);
-        entity.attr("positionorder", index);
-        entity.attr("positionx", xScale(index));
-        entity.attr("positionz", zOffset);
-        entity.attr("height", height);
-        entity.attr("minvalue", boundaries[0]);
-        entity.attr("maxvalue", boundaries[1]);
-      });
 
       // Generate Lines
       //for (i = 0; i < names.length - 2; i++) {
@@ -75,44 +77,44 @@
       generateLines(3);
       generateLines(4);
       generateLines(5);
-/*
-      x.domain(dimensions = d3.keys(cars[0]) // get column names (leaving as global)
-        .filter(function(column_name) {
-          return column_name != "name" && (y[column_name] = d3.scale.linear() // Discard names
-            .domain(d3.extent(cars, function(max_values) { // create scale from max column values
-              return +max_values[column_name]
-            }))
-            .range([height, 0]))
-        }));*/
-/*
-      var lines = d3.select("a-scene").selectAll("a-entity")
-        .data(cars)
-        .enter()
-        .append("a-entity")
-        .each(function(datum, index) {
-          // Select itself
-          var entity = d3.select(this);
-          var coordinates = dimensions.map(function(column_name) {
-            return [x(column_name), y[column_name](datum[column_name])];
-          });
-          //console.log("coords", coordinates);
-          // Loop for each dimension
-          for (i = 0; i < coordinates.length - 1; i++) {
-            var value = "start: " + offsetx + " " + coordinates[i][1] + " " + (coordinates[i][0] + offsetz) +
-              "; end: " + offsetx + " " + coordinates[i + 1][1] + " " + (coordinates[i + 1][0] + offsetz) +
-              "; color: red";
-            //console.log("lines", value);
-            entity.attr("line__" + (i + 1), value);
-          }
-        })
-*/
-/*
-        var plane = d3.select("a-scene")
-          .append("a-plane")
-          .attr("position", offsetx + " " + 0 + " " + x(dimensions[0]))
-          .attr("height", height)
-          .attr("width", width);
-*/
+      /*
+            x.domain(dimensions = d3.keys(cars[0]) // get column names (leaving as global)
+              .filter(function(column_name) {
+                return column_name != "name" && (y[column_name] = d3.scale.linear() // Discard names
+                  .domain(d3.extent(cars, function(max_values) { // create scale from max column values
+                    return +max_values[column_name]
+                  }))
+                  .range([height, 0]))
+              }));*/
+      /*
+            var lines = d3.select("a-scene").selectAll("a-entity")
+              .data(cars)
+              .enter()
+              .append("a-entity")
+              .each(function(datum, index) {
+                // Select itself
+                var entity = d3.select(this);
+                var coordinates = dimensions.map(function(column_name) {
+                  return [x(column_name), y[column_name](datum[column_name])];
+                });
+                //console.log("coords", coordinates);
+                // Loop for each dimension
+                for (i = 0; i < coordinates.length - 1; i++) {
+                  var value = "start: " + offsetx + " " + coordinates[i][1] + " " + (coordinates[i][0] + offsetz) +
+                    "; end: " + offsetx + " " + coordinates[i + 1][1] + " " + (coordinates[i + 1][0] + offsetz) +
+                    "; color: red";
+                  //console.log("lines", value);
+                  entity.attr("line__" + (i + 1), value);
+                }
+              })
+      */
+      /*
+              var plane = d3.select("a-scene")
+                .append("a-plane")
+                .attr("position", offsetx + " " + 0 + " " + x(dimensions[0]))
+                .attr("height", height)
+                .attr("width", width);
+      */
     })
 
     function generateLines(sector) {
@@ -144,34 +146,36 @@
 
       // Generate new Lines
       d3.select("a-scene").selectAll("a-datum[sector='" + sector + "']")
-      .data(csvData)
-      .enter()
-      .append("a-datum")
-      .each(function(datum, index) {
-        // Select itself
-        var entity = d3.select(this);
-        // offsetx(from axes) + scale(datum[sector]) + offsetz(from axes)
-        var firstCoord = leftAxis.attr("positionx") + " " + leftYScale(datum[leftAxis.attr("name")]) + " " + leftAxis.attr("positionz");
-        var secondCoord = rightAxis.attr("positionx") + " " + rightYScale(datum[rightAxis.attr("name")]) + " " + rightAxis.attr("positionz");
+        .data(csvData)
+        .enter()
+        .append("a-datum")
+        .each(function(datum, index) {
+          // Select itself
+          var entity = d3.select(this);
+          // offsetx(from axes) + scale(datum[sector]) + offsetz(from axes)
+          var firstCoord = leftAxis.attr("positionx") + " " + leftYScale(datum[leftAxis.attr("name")]) + " " + leftAxis.attr("positionz");
+          var secondCoord = rightAxis.attr("positionx") + " " + rightYScale(datum[rightAxis.attr("name")]) + " " + rightAxis.attr("positionz");
 
-        console.log("Creating line, first coord: " + firstCoord + " ; second coord: " + secondCoord);
-        console.log("Sector: " + parseInt(sector));
-        console.log("leftAxis order: " + leftAxis.attr("positionorder"));
-        console.log("datum: " + datum);
-        console.log("datum[leftAxis name]: " + datum[leftAxis.attr("name")]);
-        console.log("datum[rightAxis name]: " + datum[rightAxis.attr("name")]);
-        console.log("leftYScale(datum[left name]): " + leftYScale(datum[leftAxis.attr("name")]));
-        console.log("rightYScale(datum[right name]): " + rightYScale(datum[rightAxis.attr("name")]));
+          console.log("Creating line, first coord: " + firstCoord + " ; second coord: " + secondCoord);
+          console.log("Sector: " + parseInt(sector));
+          console.log("leftAxis order: " + leftAxis.attr("positionorder"));
+          console.log("datum: " + datum);
+          console.log("datum[leftAxis name]: " + datum[leftAxis.attr("name")]);
+          console.log("datum[rightAxis name]: " + datum[rightAxis.attr("name")]);
+          console.log("leftYScale(datum[left name]): " + leftYScale(datum[leftAxis.attr("name")]));
+          console.log("rightYScale(datum[right name]): " + rightYScale(datum[rightAxis.attr("name")]));
 
-        // Set attributes
-        entity.attr("firstcoord", firstCoord);
-        entity.attr("secondcoord", secondCoord);
-        entity.attr("sector", leftAxis.attr("positionorder"));
-      });
+          // Set attributes
+          entity.attr("firstcoord", firstCoord);
+          entity.attr("secondcoord", secondCoord);
+          entity.attr("sector", leftAxis.attr("positionorder"));
+        });
     }
 
     function isEqualVec3(a, b) {
-      if (!a || !b) {return false;}
+      if (!a || !b) {
+        return false;
+      }
       return (a.x === b.x && a.y === b.y && a.z === b.z);
     }
 
@@ -180,18 +184,44 @@
     */
     AFRAME.registerComponent('axis', {
       schema: {
-        colour: {default: '#FFF'},
-        name: {type: 'string', default: ''},
-        positionOrder: {type: 'int', default: 1},
-        positionX: {type: 'number', default: 1},
-        positionZ: {type: 'number', default: 1},
-        height: {type: 'number', default: height},
-        maxValue: {type: 'number', default: height},
-        minValue: {type: 'number', default: 0},
-        thickness: {type: 'int', default: 1}
+        colour: {
+          default: '#FFF'
+        },
+        name: {
+          type: 'string',
+          default: ''
+        },
+        positionOrder: {
+          type: 'int',
+          default: 1
+        },
+        positionX: {
+          type: 'number',
+          default: 1
+        },
+        positionZ: {
+          type: 'number',
+          default: 1
+        },
+        height: {
+          type: 'number',
+          default: height
+        },
+        maxValue: {
+          type: 'number',
+          default: height
+        },
+        minValue: {
+          type: 'number',
+          default: 0
+        },
+        thickness: {
+          type: 'int',
+          default: 1
+        }
       },
 
-      init: function () {
+      init: function() {
         var data = this.data;
         var geometry;
         var material;
@@ -210,9 +240,9 @@
         this.el.setObject3D(this.attrName, this.line);
       },
 
-      update: function (oldData) {
+      update: function(oldData) {
         // On property update (and after init)
-        var data = this.data;   // Property values
+        var data = this.data; // Property values
         var geometry = this.geometry;
         var geoNeedsUpdate = false;
         var material = this.material;
@@ -220,79 +250,80 @@
 
         // Geometry change
         if (data.positionX !== oldData.positionX ||
-            data.positionZ !== oldData.positionZ) {
-              // Check for overlap
-              var prevAxis = d3.select("a-scene").select("a-axis[positionorder='" + (data.positionOrder - 1) + "']");
-              var nextAxis = d3.select("a-scene").select("a-axis[positionorder='" + (data.positionOrder + 1) + "']");
+          data.positionZ !== oldData.positionZ) {
+          // Check for overlap
+          var prevAxis = d3.select("a-scene").select("a-axis[positionorder='" + (data.positionOrder - 1) + "']");
+          var nextAxis = d3.select("a-scene").select("a-axis[positionorder='" + (data.positionOrder + 1) + "']");
 
-              // Check if at ends
-              if (!prevAxis.empty()){
-                // Check if before previous axis (moving up in the list)
-                if (data.positionX < prevAxis.attr("positionx") ||
-                    data.positionY < prevAxis.attr("positiony")) {
-                      // Swap prevAxis' positionOrder
-                      prevAxis.attr("positionorder", data.positionOrder);
-                      // Decrement own positionOrder
-                      data.positionOrder--;
-
-                      // Update the sectors around it
-                      if (data.positionOrder == csvData.length - 1) {
-                        // Far right moving in
-                        // Update sectors at length - 2, length - 3
-                        generateLines(csvData.length - 2);
-                        generateLines(csvData.length - 3);
-                      } else if (data.positionOrder == 1) {
-                        // positionOrder = 1
-                        // Update sectors 0, 1
-                        generateLines(0);
-                        generateLines(1);
-                      } else {
-                        // Middle section
-                        // Update 3 sectors
-                        // sectors (positionOrder - 1), positionOrder, (positionOrder + 1)
-                        for (i = (data.positionOrder - 1); i < data.positionOrder + 2; i++){
-                          generateLines(i);
-                        }
-                      }
-                    }
-              } else if (!nextAxis.empty()) {
-                // Check if after next axis
-                if (data.positionX > nextAxis.attr("positionx") ||
-                    data.positionY > nextAxis.attr("positiony")) {
-                      // Swap prevAxis' positionOrder
-                      nextAxis.attr("positionorder", data.positionOrder);
-                      // Increment own positionOrder
-                      data.positionOrder++;
-
-                      // Update the sectors around it
-                      if (data.positionOrder == 0) {
-                        // Far left moving in
-                        // Update sectors at 0, 1
-                        generateLines(0);
-                        generateLines(1);
-                      } else if (data.positionOrder == csvData.length - 2) {
-                        // Update sectors at csvData.length - 2, csvData.length - 3
-                        generateLines(csvData.length - 2);
-                        generateLines(csvData.length - 3);
-                      } else {
-                        // Middle section
-                        // Update 3 sectors
-                        // sectors (positionOrder - 1), positionOrder, (positionOrder + 1)
-                        for (i = (data.positionOrder - 1); i < data.positionOrder + 2; i++){
-                          generateLines(i);
-                        }
-                      }
-                    }
+          // Check if at ends
+          if (!prevAxis.empty()) {
+            // Check if before previous axis (moving up in the list)
+            if (data.positionX < prevAxis.attr("positionx") ||
+              data.positionY < prevAxis.attr("positiony")) {
+              // Swap prevAxis' positionOrder
+              prevAxis.attr("positionorder", data.positionOrder);
+              // Decrement own positionOrder
+              data.positionOrder--;
+            }
+            // Update the sectors around it
+            if (data.positionOrder == csvData.length - 1) {
+              // Far right moving in
+              // Update sectors at length - 2, length - 3
+              generateLines(csvData.length - 2);
+              generateLines(csvData.length - 3);
+            } else if (data.positionOrder == 1) {
+              // positionOrder = 1
+              // Update sectors 0, 1
+              generateLines(0);
+              generateLines(1);
+            } else {
+              // Middle section
+              // Update 3 sectors
+              // sectors (positionOrder - 1), positionOrder, (positionOrder + 1)
+              for (i = (data.positionOrder - 1); i < data.positionOrder + 2; i++) {
+                generateLines(i);
               }
 
-            // Reset mesh
-            positionArray[0] = data.positionX;
-            positionArray[1] = 0;
-            positionArray[2] = data.positionZ;
-            positionArray[3] = data.positionX;
-            positionArray[4] = data.height;
-            positionArray[5] = data.positionZ;
-            geoNeedsUpdate = true;
+            }
+          } else if (!nextAxis.empty()) {
+            // Check if after next axis
+            if (data.positionX > nextAxis.attr("positionx") ||
+              data.positionY > nextAxis.attr("positiony")) {
+              // Swap prevAxis' positionOrder
+              nextAxis.attr("positionorder", data.positionOrder);
+              // Increment own positionOrder
+              data.positionOrder++;
+            }
+
+            // Update the sectors around it
+            if (data.positionOrder == 0) {
+              // Far left moving in
+              // Update sectors at 0, 1
+              generateLines(0);
+              generateLines(1);
+            } else if (data.positionOrder == csvData.length - 2) {
+              // Update sectors at csvData.length - 2, csvData.length - 3
+              generateLines(csvData.length - 2);
+              generateLines(csvData.length - 3);
+            } else {
+              // Middle section
+              // Update 3 sectors
+              // sectors (positionOrder - 1), positionOrder, (positionOrder + 1)
+              for (i = (data.positionOrder - 1); i < data.positionOrder + 2; i++) {
+                generateLines(i);
+              }
+
+            }
+          }
+
+          // Reset mesh
+          positionArray[0] = data.positionX;
+          positionArray[1] = 0;
+          positionArray[2] = data.positionZ;
+          positionArray[3] = data.positionX;
+          positionArray[4] = data.height;
+          positionArray[5] = data.positionZ;
+          geoNeedsUpdate = true;
         }
 
         if (geoNeedsUpdate) {
@@ -306,7 +337,7 @@
         material.visible = true;
       },
 
-      remove: function () {
+      remove: function() {
         this.el.removeObject3D('line', this.line);
       }
     })
@@ -316,14 +347,36 @@
     */
     AFRAME.registerComponent('datum', {
       schema: {
-        colour: {default: '#FFF'},
-        sector: {type: 'int', default: 0},
-        thickness: {type: 'int', default: 1},
-        firstCoord: {type: 'vec3', default: {x: 0, y: 0, z: 0}},
-        secondCoord: {type: 'vec3', default: {x: 0, y: 0, z: 0}}
+        colour: {
+          default: '#FFF'
+        },
+        sector: {
+          type: 'int',
+          default: 0
+        },
+        thickness: {
+          type: 'int',
+          default: 1
+        },
+        firstCoord: {
+          type: 'vec3',
+          default: {
+            x: 0,
+            y: 0,
+            z: 0
+          }
+        },
+        secondCoord: {
+          type: 'vec3',
+          default: {
+            x: 0,
+            y: 0,
+            z: 0
+          }
+        }
       },
 
-      init: function () {
+      init: function() {
         var data = this.data;
         var geometry;
         var material;
@@ -342,9 +395,9 @@
         this.el.setObject3D(this.attrName, this.line);
       },
 
-      update: function (oldData) {
+      update: function(oldData) {
         // On property update (and after init)
-        var data = this.data;   // Property values
+        var data = this.data; // Property values
         var geometry = this.geometry;
         var geoNeedsUpdate = false;
         var material = this.material;
@@ -376,7 +429,7 @@
         material.visible = true;
       },
 
-      remove: function () {
+      remove: function() {
         this.el.removeObject3D('line', this.line);
       }
     })
