--- a/testplot.html
+++ b/testplot.html
@@ -476,7 +476,7 @@
       <a-cursor></a-cursor>
     </a-camera>
     <a-sky color='#4CC3D9' fuse timeout='100'></a-sky>
-    <a-plane src="#ground" height="100" width="100" rotation="-90 0 0"></a-plane>
+    <a-plane color='#CCC' height="500" width="500" rotation="-90 0 0"></a-plane>
   </a-scene>
 </body>
 
