testing line generation

--- a/testplot.html
+++ b/testplot.html
@@ -71,12 +71,12 @@
       //  generateLines(i);
       //}
 
-      generateLines(0);
-      generateLines(1);
-      generateLines(2);
-      generateLines(3);
-      generateLines(4);
-      generateLines(5);
+      //generateLines(0);
+      //generateLines(1);
+      //generateLines(2);
+      //generateLines(3);
+      //generateLines(4);
+      //generateLines(5);
       /*
             x.domain(dimensions = d3.keys(cars[0]) // get column names (leaving as global)
               .filter(function(column_name) {
