Removed individual line debug text

--- a/testplot.html
+++ b/testplot.html
@@ -156,14 +156,14 @@
           var firstCoord = leftAxis.attr("positionx") + " " + leftYScale(datum[leftAxis.attr("name")]) + " " + leftAxis.attr("positionz");
           var secondCoord = rightAxis.attr("positionx") + " " + rightYScale(datum[rightAxis.attr("name")]) + " " + rightAxis.attr("positionz");
 
-          console.log("Creating line, first coord: " + firstCoord + " ; second coord: " + secondCoord);
-          console.log("Sector: " + parseInt(sector));
-          console.log("leftAxis order: " + leftAxis.attr("positionorder"));
-          console.log("datum: " + datum);
-          console.log("datum[leftAxis name]: " + datum[leftAxis.attr("name")]);
-          console.log("datum[rightAxis name]: " + datum[rightAxis.attr("name")]);
-          console.log("leftYScale(datum[left name]): " + leftYScale(datum[leftAxis.attr("name")]));
-          console.log("rightYScale(datum[right name]): " + rightYScale(datum[rightAxis.attr("name")]));
+          //console.log("Creating line, first coord: " + firstCoord + " ; second coord: " + secondCoord);
+          //console.log("Sector: " + parseInt(sector));
+          //console.log("leftAxis order: " + leftAxis.attr("positionorder"));
+          //console.log("datum: " + datum);
+          //console.log("datum[leftAxis name]: " + datum[leftAxis.attr("name")]);
+          //console.log("datum[rightAxis name]: " + datum[rightAxis.attr("name")]);
+          //console.log("leftYScale(datum[left name]): " + leftYScale(datum[leftAxis.attr("name")]));
+          //console.log("rightYScale(datum[right name]): " + rightYScale(datum[rightAxis.attr("name")]));
 
           // Set attributes
           entity.attr("firstcoord", firstCoord);
