--- a/testplot.html
+++ b/testplot.html
@@ -268,7 +268,7 @@
             // Swap prevAxis' positionOrder
             prevAxis.attr("positionorder", data.positionOrder);
             // Decrement positionOrder
-            this.attr("positionorder", data.positionOrder - 1);
+            this.el.attr("positionorder", data.positionOrder - 1);
             data.positionOrder--;
           } else if (!nextAxis.empty() && (data.positionX > nextAxis.attr("positionx") ||
               data.positionZ > nextAxis.attr("positionz"))) {
@@ -276,7 +276,7 @@
             // Swap nextAxis' positionOrder
             nextAxis.attr("positionorder", data.positionOrder);
             // Increment positionOrder
-            this.attr("positionorder", data.positionOrder + 1);
+            this.el.attr("positionorder", data.positionOrder + 1);
             data.positionOrder++;
           }
 
