Fixed positionorder change.

--- a/testplot.html
+++ b/testplot.html
@@ -268,7 +268,8 @@
             // Swap prevAxis' positionOrder
             prevAxis.attr("positionorder", data.positionOrder);
             // Decrement positionOrder
-            this.el.attr("positionorder", data.positionOrder - 1);
+            var thisAxis =  d3.select("a-scene").select("a-axis[positionorder='" + data.positionOrder + "']");
+            thisAxis.attr("positionorder", data.positionOrder - 1);
             data.positionOrder--;
           } else if (!nextAxis.empty() && (data.positionX > nextAxis.attr("positionx") ||
               data.positionZ > nextAxis.attr("positionz"))) {
@@ -276,7 +277,8 @@
             // Swap nextAxis' positionOrder
             nextAxis.attr("positionorder", data.positionOrder);
             // Increment positionOrder
-            this.el.attr("positionorder", data.positionOrder + 1);
+            var thisAxis =  d3.select("a-scene").select("a-axis[positionorder='" + data.positionOrder + "']");
+            thisAxis.attr("positionorder", data.positionOrder + 1);
             data.positionOrder++;
           }
 
