fixed same axis referencing.

--- a/testplot.html
+++ b/testplot.html
@@ -268,7 +268,7 @@
             // Swap prevAxis' positionOrder
             prevAxis.attr("positionorder", data.positionOrder);
             // Decrement positionOrder
-            var thisAxis =  d3.select("a-scene").select("a-axis[positionorder='" + data.positionOrder + "']");
+            var thisAxis =  d3.select("a-scene").select("a-axis[name=" + data.name + "]");
             thisAxis.attr("positionorder", data.positionOrder - 1);
             data.positionOrder--;
           } else if (!nextAxis.empty() && (data.positionX > nextAxis.attr("positionx") ||
@@ -277,7 +277,7 @@
             // Swap nextAxis' positionOrder
             nextAxis.attr("positionorder", data.positionOrder);
             // Increment positionOrder
-            var thisAxis =  d3.select("a-scene").select("a-axis[positionorder='" + data.positionOrder + "']");
+            var thisAxis =  d3.select("a-scene").select("a-axis[name=" + data.name + "]");
             thisAxis.attr("positionorder", data.positionOrder + 1);
             data.positionOrder++;
           }
