--- a/testplot.html
+++ b/testplot.html
@@ -309,14 +309,27 @@
         }
 
         if (geoNeedsUpdate) {
-          geometry.attributes.needsUpdate = true;
-          geometry.computeBoundingSphere();
-        }
+          var geometry;
+          var material;
 
-        material.color.setStyle(data.colour);
-        material.opacity = 1;
-        material.transparent = 0;
-        material.visible = true;
+          material = this.material = new THREE.LineBasicMaterial({
+            color: data.colour,
+            opacity: 1,
+            transparent: 0,
+            visible: true
+          });
+
+          geometry = this.geometry = new THREE.BufferGeometry();
+          geometry.addAttribute('position', new THREE.BufferAttribute(new Float32Array(2 * 3), 3));
+
+          this.line = new THREE.Line(geometry, material);
+          this.el.setObject3D(this.attrName, this.line);
+          }
+
+          material.color.setStyle(data.colour);
+          material.opacity = 1;
+          material.transparent = 0;
+          material.visible = true;
       },
 
       remove: function() {
