--- a/testplot.html
+++ b/testplot.html
@@ -305,31 +305,10 @@
           positionArray[3] = data.positionX;
           positionArray[4] = data.height;
           positionArray[5] = data.positionZ;
-          geoNeedsUpdate = true;
+          
+          geometry.attributes.needsUpdate = true;
+-         geometry.computeBoundingSphere();
         }
-
-        if (geoNeedsUpdate) {
-          var geometry;
-          var material;
-
-          material = this.material = new THREE.LineBasicMaterial({
-            color: data.colour,
-            opacity: 1,
-            transparent: 0,
-            visible: true
-          });
-
-          geometry = this.geometry = new THREE.BufferGeometry();
-          geometry.addAttribute('position', new THREE.BufferAttribute(new Float32Array(2 * 3), 3));
-
-          this.line = new THREE.Line(geometry, material);
-          this.el.setObject3D(this.attrName, this.line);
-          }
-
-          material.color.setStyle(data.colour);
-          material.opacity = 1;
-          material.transparent = 0;
-          material.visible = true;
       },
 
       remove: function() {
