--- a/testplot.html
+++ b/testplot.html
@@ -306,7 +306,7 @@
           positionArray[4] = data.height;
           positionArray[5] = data.positionZ;
           
-          geometry.attributes.needsUpdate = true;
+          geometry.attributes.position.needsUpdate = true;
 -         geometry.computeBoundingSphere();
         }
       },
