--- a/testplot.html
+++ b/testplot.html
@@ -455,10 +455,10 @@
     <a-sky color='#4CC3D9' fuse timeout='100'></a-sky>
     <a-plane color='#CCC' height="500" width="500" rotation="-90 0 0"></a-plane>
     <a-entity laser-controls="hand: right" controller-listener></a-entity>
-    <a-entity vive-controls="hand: left">
+    <!--<a-entity vive-controls="hand: left">
       <a-box depth="0.2" height="1" width="0.5"></a-box>
       <a-text value="Test" id='Display'></a-text>
-    </a-entity>
+    </a-entity>-->
   </a-scene>
 </body>
 
