--- a/testplot.html
+++ b/testplot.html
@@ -182,7 +182,7 @@
       var index = 1;
       var value;
       
-      for each (datum in csvData) {
+      for each (var datum in csvData) {
         value = "start: " + leftAxis.attr("positionx") + ", " + leftYScale(datum[leftAxis.attr("name")]) + ", " + leftAxis.attr("positionz");
         value += "; end: " + rightAxis.attr("positionx") + ", " + rightYScale(datum[rightAxis.attr("name")]) + ", " + rightAxis.attr("positionz");
         value += "; color: red";
