added index incrementor

--- a/testplot.html
+++ b/testplot.html
@@ -187,7 +187,7 @@
         value += "; end: " + rightAxis.attr("positionx") + ", " + rightYScale(datum[rightAxis.attr("name")]) + ", " + rightAxis.attr("positionz");
         value += "; color: red";
         entity.attr("line__" + index, value);
-
+        index++;
       }
 
 
